# tfeed

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg
tests/: test_integration.py  test_parse.py  test_unit.py
tfeed/: app.py  rss.j2
