[tool.poetry]
name = "tfeed"
version = "0.1.0"
description = "Library/service for generate RSS feed from public telegram channel without API key."
authors = ["Mikhail Zhuk <michail.zhuk@pm.me>"]
readme = "README.md"
packages = [{include = "tfeed"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
beautifulsoup4 = "^4.12"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
isort = "^5.12.0"
wemake-python-styleguide = "0.17.0"
mypy = "^1.0.0"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
